--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "deploy": "gh-pages -d dist -b deploy -r https://github.com/LAMP-LUCAS/mundoaec.git"
+
   },
   "dependencies": {
-    "@astrojs/mdx": "^4.3.5",
-    "astro": "^5.13.9"
+    "@astrojs/mdx": "^4.3.7",
+    "astro": "^5.14.7"
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
